chore: enable adding a lead to a workspace
